# simple-agent

./: .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  config.py  context.py  doom_loop.py  interfaces.py  llms.py  loop.py  session.py  tools.py  types.py
agent_core/: config.py  framework_factory.py  interfaces.py  types.py
data/extracted_data/: 001-challenge-wc.md  002-challenge-json-parser.md  003-challenge-huffman.md  004-challenge-cut.md  005-challenge-load-balancer.md  006-challenge-sort.md  007-challenge-calculator.md  008-challenge-redis.md  009-challenge-grep.md  010-challenge-uniq.md  011-challenge-webserver.md  012-challenge-url-shortener.md  013-challenge-diff.md  014-challenge-shell.md  015-challenge-cat.md  016-challenge-irc.md  017-challenge-memcached.md  018-challenge-spotify.md  019-challenge-discord.md  020-challenge-licq.md  021-challenge-sed.md  022-challenge-dns-resolver.md  023-challenge-traceroute.md  024-challenge-realtime-chat.md  025-challenge-nats.md  026-challenge-git.md  027-challenge-rate-limiter.md  028-challenge-ntp.md  029-challenge-scheduler.md  030-challenge-lisp.md  031-challenge-qr-generator.md  032-challenge-cron.md  033-challenge-head.md  (+80 more)
evals/: README.md  run.py  search_eval.py  tool_call_eval.py
prompts/: challenge-data.json  system_prompt_tool.md
scripts/: split_challenge_data.py
tests/: test_context.py  test_doom_loop.py  test_duckdb_search_tool.py  test_evals_core.py  test_gemini_thought_signatures.py  test_system_prompt.py  test_url_fetch_tool.py
(+34 files in other folders)
